# froog-lang

./: .clang-format  .froog_config  CMakeLists.txt  README.md  init.sh  main.c
samples/: arith.frog  hello.frog
src/: CMakeLists.txt  error.h
src/lexer/: lexer.c  lexer.h
src/utils/: enum_to_string.c
